# nexus

./: .gitignore  .gitreview  AUTHORS  CONTRIBUTING.md  README.md  config.py  crawl.sh  manage.py  requirements.txt  run.py  sadftest.py  setup.cfg  tox.ini
app/: __init__.py  citellus.db  config.py  models.py  seed.py  views.py
app/auth/: forms.py  views.py
app/cases/: __init__.py  forms.py  helper.py  views.py
app/checks/: __init__.py  helper.py
app/errors/: __init__.py
app/health/: __init__.py  views.py
app/helpers/: __init__.py  blockinfo.py  cpuinfo.py  history.py  meminfo.py  sosreport.py  sysstat.py  test.py
app/history/: __init__.py  views.py
app/home/: views.py
app/metrics/: __init__.py  forms.py  views.py
app/models/: __init__.py  auth.py  check_results.py  checks.py  datahooks.py  history.py  reports.py  users.py
app/network/: __init__.py  show.html  views.py
app/pyinfo/: __init__.py  views.py
app/reports/: __init__.py  helper.py  views.py
app/static/css/: site.css
app/static/js/: highcharts.dark.js  patternfly.min.min.js
app/templates/: base.html  cases.html  home.html
app/templates/auth/: login.html  login.ori.html  register.html
app/templates/cases/: modal.html  notfound.html  search.html  search_form.html  test.html
app/templates/checks/: show.html
app/templates/errors/: generic-error.html  reportnotfound.html  traceback.html
app/templates/health/: macros.html  (+2 more)
app/trends/: __init__.py  views.py
db/: nexus.db
instance/: config.py  config.py.sample
migrations/versions/: 987171517974_.py  f78f7c6c341f_.py
(+20 files in other folders)
