[bumpversion]
current_version = 0.1.3

[metadata]
version = 0.1.0
name = nexus
summary = Web interface for grouping citellus analisys
description-file = README.md
license = GPL3
classifiers = 
	Framework :: Flask
	Environment :: Web Environment
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Unix Shell
	Environment :: OpenStack
	Topic :: System
	Topic :: Security
	Topic :: Utilities
	Intended Audience :: System Administrators
	Intended Audience :: Customer Service
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	Intended Audience :: Telecommunications Industry
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: POSIX :: Linux
author = David Vallee Delisle
author-email = dvalleed@redhat.com
home-page = https://github.com/valleedelisle/nexus

[files]
packages = 
	app

[entry_points]

[nosetests]
detailed-errors = 1
with-coverage = 1
cover-package = 
	app
cover-erase = 1
verbosity = 2

[extract_messages]
input_dirs = app
output_file = app/locale/citellus.pot

